frontend/src/components/Events/EventsStyling.css
.events-list {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    margin-left: 18px;
    padding: 0;
}

.event-container {
    margin: 15px;
    padding: 15px;
    /* border: solid 1.45px  rgb(213, 231, 247); */
    border-radius: 10px;
    display: inline-block;
    text-align: center;
    /* width: 100%; */
}

.events-page {
    margin-top: 25px;
    margin-right: 25px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    width: 100%;
}

.event-image {
    border-radius: 10px;
    margin-bottom: 10px;
    width: 250px;
    height: 250px;
    object-fit: cover;
}

.new-event-button {
    background-color: rgb(213, 231, 247);
    border: solid rgb(213, 231, 247);
    border-radius: 10px;
    font-size: 14px;
    font-weight: 500;
    margin: 5px;
}

.single-event {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.event-li {
    margin: 10px;
}

.event-buttons {
    display: flex;
    justify-content: flex-end;
}

.event-button {
    margin: 10px;
}

.single-event-image {
    border-radius: 6px;
}

.event-edit {
    background-color: rgb(213, 231, 247);
    border: solid rgb(213, 231, 247);
    border-radius: 10px;
    font-size: 14px;
    font-weight: 500;
}

.event-delete {
    background-color: rgb(252, 177, 177);
     border: solid rgb(252, 177, 177);
    border-radius: 10px;
    font-size: 14px;
    font-weight: 500;
}

.new-event-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 500px;
    border-radius: 10px;
    margin-top: 10px;
    border: 2px solid rgb(213, 231, 247);
    border-radius: 10px;
    height: 80%;
}

.new-event-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 80%;
    justify-content: center;
    margin-top: 5px;
}


.new-event-div {
  display: flex;
  flex-direction: column;
  margin-bottom: 15px;
}

.new-event-creator {
    margin-bottom: 15px;
}

.description {
    height: 100px;
}

.errors {
    color: red;
}

.new-event-container > h2 {
    color: rgb(213, 231, 247);
}

.event-description {
   overflow-wrap: normal;
   overflow-y: scroll;
   overflow-x: wrap;
   width: 50%;
   height: auto;
}

.new-event-info {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.event-maker-button-div {
    display: flex;
    justify-content: space-between;
}

